# kovi-mail

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs
