[package]
name = "kovi-plugin-mail"
version = "0.1.0"
edition = "2024"

[lib]
name = "kovi_plugin_mail"
path = "src/lib.rs"

[dependencies]
anyhow = ">=1.0.98"
async-imap = { version = "0.11.0", default-features = false, features = [
    "runtime-tokio",
] }
async-native-tls = { version = "0.5.0", default-features = false, features = [
    "runtime-tokio",
] }
base64 = ">=0.22.1"
encoded-words = ">=0.2.0"
futures = ">=0.3.31"
kovi = ">=0.12.4"
serde = { version = ">=1.0.219", features = ["derive"] }
tokio-util = ">=0.7.15"
toml = ">=0.9.2"
